# legalsahayak

./: README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  build_vectorstore.py  main.py  pyproject.toml  requirements.txt
backend/core/: config.py  exceptions.py  prompt.py  security.py
backend/data/: FUNDAMENTAL_RIGHTS.md  HINDU_MARRIAGE_LAW.md  MUSLIM_MARRIAGE_LAW.md  RENTAL_LAW.md
backend/faiss_index/: index.faiss  index.pkl
backend/models/: schemas.py
backend/routes/: metrics_route.py  qa_route.py
backend/services/: metrics_service.py  qa_service.py  query_processor.py
frontend/: next.config.ts  package.json  pnpm-lock.yaml  proxy.ts  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/assistant/: page.tsx
frontend/app/(app)/assistant/chat/: actions.ts  (+1 more)
frontend/app/(app)/dashboard/: layout.tsx  page.tsx
frontend/app/(app)/forum/: layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/signin/: page.tsx
frontend/app/(auth)/signup/: page.tsx
frontend/app/api/qa/: route.ts
frontend/app/onboarding/: page.tsx
frontend/components/: language-toggle.tsx  route-guard.tsx
frontend/components/layout/: app-header.tsx  app-sidebar.tsx  footer.tsx
frontend/components/providers/: language-provider.tsx
frontend/components/ui/: separator.tsx
frontend/lib/: auth-middleware.ts  auth.ts  data.ts  library-documents.ts  use-auth.ts
frontend/lib/i18n/: translations.ts
frontend/public/data/: CONSUMER_PROTECTION_LAW.md  LABOUR_LAW.md
