[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.2",
    "uvicorn[standard]>=0.40.0",
]
